prevented layout shrinking on mobile pinch-zoom

--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,21 @@ body{
   min-height: 100vh;
 }
 
+body, html {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+
+header,
+footer {
+  width: 100%;
+  max-width: 100%;
+}
+
+
 h3{
   font-weight: 700;
 }
@@ -205,8 +220,8 @@ footer a{
 }
 
 .index-container{
-  padding: 60px 20px;
-  max-width: 1400px;
+  padding: 60px 20px !important;
+  max-width: 1400px !important;
 }
 
 .index-content p{
@@ -765,7 +780,6 @@ footer a{
     overflow: hidden;
     transition: max-height 0.3s ease-out;
     background: #f0f0f0;
-  
   }
   
   .sub-menu-toggle.open {
@@ -781,7 +795,6 @@ footer a{
     font-size: 20px;
   }
   
-
   header h1 {
     font-size: 40px;
   }
@@ -940,9 +953,7 @@ footer a{
 
   .city-container{
     display: block;
-    padding: 5px;
-    max-width: 900px;
-    font-size: 16px;    
+    margin: 0 auto;
   }
 
   .card{
